syntax = "proto3";
package exomonad.agent;

import "exomonad/common.proto";

// Agent management types for spawning, monitoring, and cleaning up agents.

// Type of LLM agent to spawn.
enum AgentType {
  AGENT_TYPE_UNSPECIFIED = 0;
  AGENT_TYPE_CLAUDE = 1;   // Claude Code agent
  AGENT_TYPE_GEMINI = 2;   // Gemini agent
}

// Current status of an agent.
enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_RUNNING = 1;    // Agent is actively running
  AGENT_STATUS_STOPPED = 2;    // Agent has stopped
  AGENT_STATUS_FAILED = 3;     // Agent encountered an error
  AGENT_STATUS_WAITING = 4;    // Agent is waiting for input
}

// Options for spawning a new agent.
message SpawnOptions {
  AgentType agent_type = 1;
  exomonad.common.Role role = 2;
  string initial_prompt = 3;
  string branch_prefix = 4;   // Prefix for the git branch
  string worktree_name = 5;   // Custom worktree directory name
}

// Information about a spawned agent.
message AgentInfo {
  string worktree_path = 1;            // Path to the git worktree
  string branch_name = 2;              // Git branch name
  AgentType agent_type = 3;
  exomonad.common.Role role = 4;
  AgentStatus status = 5;
  string zellij_tab = 6;               // Zellij tab name if running
  string error = 7;                    // Error message if failed
}

// Git worktree information.
message WorktreeInfo {
  string path = 1;                     // Absolute path to worktree
  string branch = 2;                   // Branch name
  string head_commit = 3;              // HEAD commit SHA
  bool is_dirty = 4;                   // Has uncommitted changes
}

// GitHub issue assignment for spawning.
message IssueAssignment {
  exomonad.common.IssueRef issue = 1;
  AgentType agent_type = 2;
  exomonad.common.Role role = 3;
}

// Request to spawn multiple agents.
message SpawnAgentsRequest {
  repeated IssueAssignment assignments = 1;
}

// Result of spawning multiple agents.
message SpawnAgentsResult {
  repeated AgentInfo agents = 1;
  repeated string errors = 2;          // Errors for failed spawns
}

// Request to cleanup agents.
message CleanupAgentsRequest {
  repeated string worktree_paths = 1;  // Worktrees to clean up
  bool force = 2;                      // Force cleanup even with uncommitted changes
}

// Result of cleanup operation.
message CleanupResult {
  repeated string cleaned = 1;         // Successfully cleaned worktree paths
  repeated string failed = 2;          // Failed worktree paths
  repeated string errors = 3;          // Error messages
}

// Request to list active agents.
message ListAgentsRequest {
  AgentStatus filter_status = 1;
  exomonad.common.Role filter_role = 2;
}

// Response listing active agents.
message ListAgentsResponse {
  repeated AgentInfo agents = 1;
}
